@@ -1,7 +1,10 @@
 Changes in version 0.1.2.4-alpha - 2006-11-??
-  o Minor Features
+  o Minor features
     - Add breakdown of public key operations to dumped statistics.
 
+  o Minor bugfixes
+    - Don't log spurious warnings when we see a circuit close reason we
+      don't recognize; it's probably just from a newer version of Tor.
 
 Changes in version 0.1.2.3-alpha - 2006-10-29
   o Minor features:
